--- a/index.html
+++ b/index.html
@@ -74,24 +74,27 @@
 </head>
 <body class="bg-dark-navy text-white min-h-screen">
 
-    <!-- Header / Navigation Bar - Applied Glassmorphism -->
-    <header class="p-4 md:p-6 sticky top-0 bg-white/5 backdrop-blur-lg border-b border-white/10 z-50">
-        <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <a href="#" class="flex items-center space-x-2 text-xl font-bold text-white">
-                <!-- Music Icon (Bot Logo) - UPDATED TO USE IMAGE URL -->
-                <img src="https://i.ibb.co/HD3VxXzp/U1-music-bot-icon.png" alt="U1 Music Bot Icon" class="w-6 h-6 rounded-md">
-                <span>U1 Music™</span>
-            </a>
-            <nav class="hidden lg:flex space-x-8 items-center text-sm font-medium">
-                <a href="#features" class="hover:text-primary-blue transition duration-200">Features</a>
-                <a href="#commands" class="hover:text-primary-blue transition duration-200">Commands</a>
-                <!-- Support Link Updated to Sus Gang Discord URL -->
-                <a href="https://discord.gg/bdZhjy3n6z" target="_blank" class="hover:text-primary-blue transition duration-200">Support / Sus Gang™</a>
-                <!-- Invite Button in Nav - UPDATED LINK -->
-                <a href="https://discord.com/oauth2/authorize?client_id=1418673291190730792&permissions=4331694080&integration_type=0&scope=bot" target="_blank" class="bg-primary-blue hover:bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg transition duration-300 shadow-lg shadow-primary-blue/30">
-                    Invite Bot
+    <!-- Header / Navigation Bar - Floating, Pill-Shaped Glassmorphism -->
+    <header class="sticky top-0 z-50 p-4">
+        <div class="max-w-7xl mx-auto">
+            <!-- The Pill Header Element -->
+            <div class="bg-white/10 backdrop-blur-xl rounded-3xl border border-white/20 px-6 py-3 flex justify-between items-center shadow-2xl shadow-dark-navy/50">
+                <a href="#" class="flex items-center space-x-2 text-xl font-bold text-white">
+                    <!-- Music Icon (Bot Logo) -->
+                    <img src="https://i.ibb.co/HD3VxXzp/U1-music-bot-icon.png" alt="U1 Music Bot Icon" class="w-6 h-6 rounded-md">
+                    <span>U1 Music™</span>
                 </a>
-            </nav>
+                <nav class="hidden lg:flex space-x-8 items-center text-sm font-medium">
+                    <a href="#features" class="hover:text-primary-blue transition duration-200">Features</a>
+                    <a href="#commands" class="hover:text-primary-blue transition duration-200">Commands</a>
+                    <!-- Support Link Updated to Sus Gang Discord URL -->
+                    <a href="https://discord.gg/bdZhjy3n6z" target="_blank" class="hover:text-primary-blue transition duration-200">Support / Sus Gang™</a>
+                    <!-- Invite Button in Nav - UPDATED LINK and REMAINS rounded-full -->
+                    <a href="https://discord.com/oauth2/authorize?client_id=1418673291190730792&permissions=8&integration_type=0&scope=bot" target="_blank" class="bg-primary-blue hover:bg-indigo-600 text-white font-semibold py-2 px-4 rounded-full transition duration-300 shadow-lg shadow-primary-blue/30">
+                        Invite Bot
+                    </a>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -116,8 +119,8 @@
                     Built on **Lavalink** for unparalleled speed, U1 Music delivers seamless, lag-free, high-fidelity audio. Effortlessly play your favorite tracks and playlists from **Spotify** and **YouTube** directly in your Discord voice channels.
                 </p>
 
-                <!-- Main CTA Button - UPDATED LINK -->
-                <a href="https://discord.com/oauth2/authorize?client_id=1418673291190730792&permissions=4331694080&integration_type=0&scope=bot" target="_blank" class="inline-flex items-center justify-center space-x-3 bg-primary-blue hover:bg-indigo-600 text-white font-semibold py-3 px-8 mt-6 rounded-xl transition duration-300 shadow-2xl shadow-primary-blue/50 transform hover:scale-[1.02] active:scale-[0.98] animation-glow">
+                <!-- Main CTA Button - UPDATED LINK and now rounded-full for oval shape -->
+                <a href="https://discord.com/oauth2/authorize?client_id=1418673291190730792&permissions=8&integration_type=0&scope=bot" target="_blank" class="inline-flex items-center justify-center space-x-3 bg-primary-blue hover:bg-indigo-600 text-white font-semibold py-3 px-8 mt-6 rounded-full transition duration-300 shadow-2xl shadow-primary-blue/50 transform hover:scale-[1.02] active:scale-[0.98] animation-glow">
                     <span>Invite U1 Music Now</span>
                     <!-- Arrow Right Icon -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
