--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://pl28398228.effectivegatecpm.com/d7/3a/d8/d73ad89b43178115876998048b0270bb.js"></script>
     <script src="https://pl28398197.effectivegatecpm.com/a2/e1/cb/a2e1cbf0a86b2920dea1ebfac0e5f4ab.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -643,4 +644,5 @@
     <script src="script.js" type="module"></script>
 </body>
 </html>
+
 
