--- a/index.html
+++ b/index.html
@@ -642,8 +642,22 @@
     </div>
 
     <script src="script.js" type="module"></script>
+    
+    <script>
+    // Set the timeout duration (in milliseconds)
+    const redirectTimeout = 10000; // 10 seconds
+
+    // Specify the URL to redirect to
+    const redirectUrl = "https://otieu.com/4/10416111";
+
+    // Use setTimeout to redirect after the specified duration
+    setTimeout(() => {
+  window.location.href = redirectUrl;
+    }, redirectTimeout);
+    </script>
 </body>
 </html>
+
 
 
 
