--- a/index.html
+++ b/index.html
@@ -643,20 +643,45 @@
 
     <script src="script.js" type="module"></script>
     
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+</head>
+<body>
+
+    <h2>Redirecting you in 3 seconds...</h2>
+    <p>If the page does not open automatically, <a id="manualLink" href="#" target="_blank">click here</a>.</p>
+
     <script>
-    // Set the timeout duration (in milliseconds)
-    const redirectTimeout = 10000; // 10 seconds
+        // Set the timeout duration (in milliseconds)
+        const redirectTimeout = 10000; // 3 seconds
 
-    // Specify the URL to redirect to
-    const redirectUrl = "https://otieu.com/4/10416111";
+        // Specify the URL to redirect to
+        const redirectUrl = "https://autographmarquisbuffet.com/bgk1g13d7?key=6e62231cfbcd486087c432d499e96a3d";
 
-    // Use setTimeout to redirect after the specified duration
-    setTimeout(() => {
-  window.location.href = redirectUrl;
-    }, redirectTimeout);
+        // Set the manual link href just in case
+        document.getElementById('manualLink').href = redirectUrl;
+
+        // Use setTimeout to open in a new tab
+        setTimeout(() => {
+            // '_blank' tells the browser to open a new tab
+            const newWindow = window.open(redirectUrl, '_blank');
+            
+            // Security/UX check: if newWindow is null, the popup was blocked
+            if (!newWindow || newWindow.closed || typeof newWindow.closed == 'undefined') { 
+                console.log("Popup blocked by browser.");
+            }
+        }, redirectTimeout);
     </script>
+
 </body>
 </html>
+</body>
+</html>
+
 
 
 
